--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-responsive": "^10.0.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "vite-plugin-qrcode": "^0.3.0"
